fixed nav issue in mobile
had issue where nav was not showing all items in sub menu category

--- a/blocks/all-featured-articles/featured-title.css
+++ b/blocks/all-featured-articles/featured-title.css
@@ -66,4 +66,10 @@
   .latest-modal-brands div ul {
     margin-top: 0;
   }
+
+  .nav-modal-latest-content-section .columns-wrapper {
+    height: auto;
+    position: relative;
+    display: flex;
+  }
 }
